@startuml

title __CHAIN's Class Diagram__\n

  namespace com.itbird {
    namespace design.chain {
      class com.itbird.design.chain.Client {
          # onCreate()
          # onDestroy()
      }
    }
  }
  

  namespace com.itbird {
    namespace design.chain {
      abstract class com.itbird.design.chain.Handler {
          ~ TAG()
          {abstract} ~ handlerRequeset()
          ~ setNext()
      }
    }
  }
  

  namespace com.itbird {
    namespace design.chain {
      class com.itbird.design.chain.Request {
          ~ url : String
          + getUrl()
          + setUrl()
      }
    }
  }
  

  namespace com.itbird {
    namespace design.chain {
      class com.itbird.design.chain.RequestHandler1 {
          ~ handlerRequeset()
      }
    }
  }
  

  namespace com.itbird {
    namespace design.chain {
      class com.itbird.design.chain.RequestHandler2 {
          ~ handlerRequeset()
      }
    }
  }
  

  namespace com.itbird {
    namespace design.chain {
      class com.itbird.design.chain.RequestHandler3 {
          ~ handlerRequeset()
      }
    }
  }
  

  com.itbird.design.chain.Client -up-|> androidx.appcompat.app.AppCompatActivity
  com.itbird.design.chain.Handler o-- com.itbird.design.chain.Handler : next
  com.itbird.design.chain.RequestHandler1 -up-|> com.itbird.design.chain.Handler
  com.itbird.design.chain.RequestHandler2 -up-|> com.itbird.design.chain.Handler
  com.itbird.design.chain.RequestHandler3 -up-|> com.itbird.design.chain.Handler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
